<resources>
    <string name="app_name">Compose Training</string>
    <string name="wrong_username">User should be a valid email</string>
    <string name="short_password">Password should be at least 5 characters</string>
    <string name="user">User</string>
    <string name="user_placeholder">Use your best email</string>
    <string name="password">Password</string>
    <string name="pass_placeholder">At least 5 characters</string>
    <string name="reveal_password">Reveal Password</string>
    <string name="hide_password">Hide password</string>
    <string name="more_actions">More actions</string>
    <string name="clone">Clone</string>
    <string name="delete">Delete</string>
    <string name="change_view">Change view</string>
</resources>